--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3917,7 +3917,7 @@
     "selected_all": "избрано всичко",
     "set_temp_error": "Зададената температура не може да бъде достигната. Моля, променете температурата на водния път.",
     "no_device_support_eco_key": "Няма налични устройства, моля, уверете се, че вашите устройства са свързани и поддържат ECO режим.",
-    "appliance_disconnect_cannot_open_eco": "Устройството е изключено, моля, проверете дали WiFi и дистанционното управление са активирани.",
+    "appliance_disconnect_cannot_open_eco": "Устройството е прекъснато, моля, проверете дали Wi-Fi и дистанционното управление са активирани.",
     "power_on_remote_eabled_tips": "Налично само когато устройството е включено и дистанционното стартиране е активирано.",
     "power_on_tips": "Налично само когато устройството е включено.",
     "asko_oven_on_during_on": "ВКЛ. по време на употреба",
@@ -4149,5 +4149,43 @@
     "CL_DV_HOB_refresh_mode": "Режим на опресняване",
     "hob_induction3_new_tips": "Научете как да свържете вашия интелигентен съд за готвене и прегледайте широка гама от рецепти стъпка по стъпка, специално създадени за готвене с прецизна температура.",
     "CL_DV_OV_added_successfully": "Добавено успешно!",
-    "add_routine": "ДОБАВЯНЕ НА РУТИНА"
+    "add_routine": "ДОБАВЯНЕ НА РУТИНА",
+    "CL_DV_PIND_update_blue_tooth": "Уверете се, че вашият bluetooth е включен.",
+    "CL_DV_PIND_accessory_firmware_update": "Актуализация на фърмуера на аксесоара",
+    "CL_CF_CS_ble_scan_not_list": "Ако вашето устройство не е в списъка, можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
+    "CL_CF_CS_ble_scan_have_not_found": "Не открихме устройство с Bluetooth. Можете да щракнете върху „ОПИТАЙ ОТНОВО“, за да търсите отново, или да щракнете върху „СЛЕДВАЩ“, за да конфигурирате мрежата по друг начин.",
+    "CL_DV_WM_pump_cleaning": "Почистваща помпа...",
+    "CL_DV_WM_autodoes_tip": "Активирайте тази функция и вашето устройство интелигентно ще дозира препарат и омекотител, докато перете прането си.",
+    "CL_DV_WM_detergent_department_key": "ОТДЕЛЕНИЕ ЗА ПЕРИЛЕН ПРЕПАРАТ",
+    "CL_DV_WM_Dosage_Amount_key": "Количество на дозата",
+    "CL_DV_WM_softener_department_key": "ОТДЕЛЕНИЕ ЗА ОМЕКОТИТЕЛ",
+    "CL_DV_WM_auto_does_with_detergent": "Автодоза с препарат",
+    "CL_DV_WM_same_detergent": "Същият препарат",
+    "CL_DV_WM_normal_dosage_weight_tip": "Нормална дозировка: 4~5 кг тегло на дрехите.",
+    "CL_DV_WM_pump_clean_note_1": "Бележки: Ако искате да промените съдържанието на дозиращия компонент, моля, не забравяйте ",
+    "CL_DV_WM_pump_clean_note_2": "първо почистете компонента.",
+    "CL_DV_WM_Pump_clean_key": "Помпа чиста",
+    "CL_DV_WM_pump_clean_how_to_use": "Как се използва?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Изпразнете и напълнете отделението с вода, преди да активирате функцията за почистване на помпата.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Активирайте функцията за почистване на помпата от страната на машината.",
+    "CL_DV_WM_pump_clean_when_to_use": "Кога да се използва?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Ако искате да смените съдържанието в отделението „Омекотител“, моля, уверете се, че е празно и стартирайте функцията за почистване на помпата преди следваща употреба. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Повече от половин година не сте почиствали помпата, можете да активирате функцията за почистване на помпата.",
+    "CL_DV_WM_standard_auto_does_key": "СТАНДАРТНА АВТОДОЗА",
+    "CL_DV_WM_compartment_in_use_key": "ИЗПОЛЗВАНО ОТДЕЛЕНИЕ",
+    "CL_CF_CS_oven_g_800_cs_1": "Настройте устройството на нормални работни условия.\n Докоснете иконата на менюто.",
+    "CL_CF_CS_oven_g_800_cs_2": "Докоснете и задръжте иконата на Wi-Fi за приблизително 3-6 секунди, докато достигне „C“ на времевата линия.",
+    "CL_CF_CS_oven_g_800_cs_3": "Мрежата на устройството вече е отворена за връзка за 5 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_CF_CS_oven_g_800_p_1": "Настройте устройството на нормални работни условия.\n Докоснете иконата на менюто.",
+    "CL_CF_CS_oven_g_800_p_2": "Докоснете и задръжте иконата на Wi-Fi за приблизително 6-9 секунди, докато достигне „P“ на времевата линия.",
+    "CL_CF_CS_oven_g_800_p_3": "Устройството вече е готово за сдвояване за 3 минути.\n Щракнете върху НАПРЕД, за да продължите.",
+    "CL_DV_PIND_update_fail_tip1": "Възникна неочаквана грешка. Актуализацията на фърмуера беше неуспешна.",
+    "CL_DV_PIND_update_fail_tip4": "Моля, опитайте отново, за да актуализирате вашия аксесоар.",
+    "CL_DV_PIND_update_fail_tip2": "Дръжте устройствата си наблизо, докато актуализирате.",
+    "CL_DV_PIND_update_fail_tip3": "Проверете вашата bluetooth връзка.",
+    "room_good_content": "Климатът на тази стая е добър. Засега не е необходима оптимизация.",
+    "edit_address_title": "РЕДАКТИРАНЕ НА АДРЕС",
+    "edit_profile_title": "РЕДАКТИРАНЕ НА ПОТРЕБИТЕЛСКИ ПРОФИЛ",
+    "CL_DV_OV_reduce_moisture": "Намалете влагата",
+    "air_care_level_tips": "Стандарт за оценка на температурата: Добър: 17 < T < 27℃ Нормален: 10≤T≤17℃, 27≤T≤30℃ Недобър: T＜10℃ T＞30℃ Стандарт за оценка на влажността: Добър: H < 70% Нормален: 30≤H≤40%, 70≤H≤80% Не е добре: H<30%, H>80%"
 }
