--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3917,7 +3917,7 @@
     "selected_all": "tout sélectionné",
     "set_temp_error": "La température réglée ne peut pas être atteinte. Veuillez modifier la température de l’eau.",
     "no_device_support_eco_key": "Aucun appareil n'est disponible, veuillez vous assurer que vos appareils sont connectés et prennent en charge le mode ECO.",
-    "appliance_disconnect_cannot_open_eco": "L'appareil est déconnecté, veuillez vérifier si le WiFi et la télécommande sont activés.",
+    "appliance_disconnect_cannot_open_eco": "L'appareil est déconnecté, veuillez vérifier si le Wi-Fi et la télécommande sont activés.",
     "power_on_remote_eabled_tips": "Disponible uniquement lorsque l'appareil est sous tension et que le démarrage à distance est activé.",
     "power_on_tips": "Disponible uniquement lorsque l'appareil est sous tension.",
     "asko_oven_on_during_on": "Allumé pendant l'utilisation",
@@ -4149,5 +4149,43 @@
     "CL_DV_HOB_refresh_mode": "Mode de rafraîchissement",
     "hob_induction3_new_tips": "Découvrez comment connecter vos ustensiles de cuisine intelligents et parcourez une large gamme de recettes étape par étape, spécialement conçues pour une cuisson à température précise.",
     "CL_DV_OV_added_successfully": "Ajouté avec succès !",
-    "add_routine": "AJOUTER UNE ROUTINE"
+    "add_routine": "AJOUTER UNE ROUTINE",
+    "CL_DV_PIND_update_blue_tooth": "Assurez-vous que votre Bluetooth est activé.",
+    "CL_DV_PIND_accessory_firmware_update": "Mise à jour du firmware des accessoires",
+    "CL_CF_CS_ble_scan_not_list": "Si votre appareil n'est pas répertorié, vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil compatible Bluetooth. Vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
+    "CL_DV_WM_pump_cleaning": "Pompe de nettoyage...",
+    "CL_DV_WM_autodoes_tip": "Activez cette fonction et votre appareil distribuera intelligemment du détergent et de l'assouplissant pendant que vous faites votre lessive.",
+    "CL_DV_WM_detergent_department_key": "COMPARTIMENT À DÉTERGENT",
+    "CL_DV_WM_Dosage_Amount_key": "Quantité de dosage",
+    "CL_DV_WM_softener_department_key": "COMPARTIMENT ADOUCISSANT",
+    "CL_DV_WM_auto_does_with_detergent": "Autodose avec détergent",
+    "CL_DV_WM_same_detergent": "Même détergent",
+    "CL_DV_WM_normal_dosage_weight_tip": "Dosage normal : 4 à 5 kg de poids de vêtements.",
+    "CL_DV_WM_pump_clean_note_1": "Remarques : Si vous souhaitez modifier le contenu du composant de distribution, n'oubliez pas de ",
+    "CL_DV_WM_pump_clean_note_2": "nettoyez d'abord le composant.",
+    "CL_DV_WM_Pump_clean_key": "Nettoyage de la pompe",
+    "CL_DV_WM_pump_clean_how_to_use": "Comment utiliser?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Videz et remplissez le compartiment d'eau avant d'activer la fonction de nettoyage de la pompe.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Activez la fonction de nettoyage de la pompe du côté de la machine.",
+    "CL_DV_WM_pump_clean_when_to_use": "Quand l'utiliser ?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Si vous souhaitez changer le contenu du compartiment « Adoucisseur », assurez-vous qu'il est vide et exécutez la fonction de nettoyage de la pompe avant la prochaine utilisation. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Si vous n'avez pas nettoyé la pompe depuis plus de six mois, vous pouvez activer la fonction de nettoyage de la pompe.",
+    "CL_DV_WM_standard_auto_does_key": "AUTODOSE STANDARD",
+    "CL_DV_WM_compartment_in_use_key": "COMPARTIMENT EN COURS D'UTILISATION",
+    "CL_CF_CS_oven_g_800_cs_1": "Réglez l'appareil sur des conditions de fonctionnement normales.\n Appuyez sur l'icône de menu.",
+    "CL_CF_CS_oven_g_800_cs_2": "Appuyez et maintenez l'icône Wi-Fi pendant environ 3 à 6 secondes jusqu'à ce qu'elle atteigne le « C » sur la chronologie.",
+    "CL_CF_CS_oven_g_800_cs_3": "Le réseau de l'appareil est désormais ouvert à la connexion pendant 5 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_CF_CS_oven_g_800_p_1": "Réglez l'appareil sur des conditions de fonctionnement normales.\n Appuyez sur l'icône de menu.",
+    "CL_CF_CS_oven_g_800_p_2": "Appuyez et maintenez l'icône Wi-Fi pendant environ 6 à 9 secondes jusqu'à ce qu'elle atteigne le « P » sur la chronologie.",
+    "CL_CF_CS_oven_g_800_p_3": "L'appareil est maintenant prêt à être couplé pendant 3 minutes.\n Cliquez sur SUIVANT pour continuer.",
+    "CL_DV_PIND_update_fail_tip1": "Une erreur inattendue s'est produite. La mise à jour du firmware a échoué.",
+    "CL_DV_PIND_update_fail_tip4": "Veuillez réessayer de mettre à jour votre accessoire.",
+    "CL_DV_PIND_update_fail_tip2": "Gardez vos appareils à proximité pendant la mise à jour.",
+    "CL_DV_PIND_update_fail_tip3": "Vérifiez votre connexion Bluetooth.",
+    "room_good_content": "La climatisation de cette pièce est bonne. Aucune optimisation n'est nécessaire pour l'instant.",
+    "edit_address_title": "MODIFIER L'ADRESSE",
+    "edit_profile_title": "MODIFIER LE PROFIL UTILISATEUR",
+    "CL_DV_OV_reduce_moisture": "Réduire l'humidité",
+    "air_care_level_tips": "Norme d'évaluation de la température : Bonne : 17 < T < 27℃ Normale : 10≤T≤17℃, 27≤T≤30℃ Mauvaise : T＜10℃ T＞30℃ Norme d'évaluation de l'humidité : Bonne : H < 70 % Normale : 30≤H≤40 %, 70≤H≤80 % Mauvaise : H＜30 %, H＞80 %"
 }
