--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -3917,7 +3917,7 @@
     "selected_all": "wybrano wszystko",
     "set_temp_error": "Nie można osiągnąć ustawionej temperatury. Proszę zmodyfikować temperaturę wody.",
     "no_device_support_eco_key": "Żadne urządzenie nie jest dostępne, proszę upewnić się, że urządzenia są podłączone i obsługują tryb ECO.",
-    "appliance_disconnect_cannot_open_eco": "Urządzenie jest odłączone, proszę sprawdzić, czy WiFi i pilot są włączone.",
+    "appliance_disconnect_cannot_open_eco": "Urządzenie jest odłączone. Sprawdź, czy Wi-Fi i zdalne sterowanie są włączone.",
     "power_on_remote_eabled_tips": "Dostępne tylko wtedy, gdy urządzenie jest włączone i włączona jest funkcja zdalnego uruchamiania.",
     "power_on_tips": "Dostępne tylko wtedy, gdy urządzenie jest włączone.",
     "asko_oven_on_during_on": "WŁĄCZONY podczas użytkowania",
@@ -4149,5 +4149,43 @@
     "CL_DV_HOB_refresh_mode": "Tryb odświeżania",
     "hob_induction3_new_tips": "Dowiedz się, jak podłączyć inteligentne naczynia kuchenne i przejrzyj szeroką gamę przepisów krok po kroku, stworzonych specjalnie do gotowania z precyzją odpowiadającą temperaturze.",
     "CL_DV_OV_added_successfully": "Dodano pomyślnie!",
-    "add_routine": "DODAJ RUTYNĘ"
+    "add_routine": "DODAJ RUTYNĘ",
+    "CL_DV_PIND_update_blue_tooth": "Upewnij się, że Bluetooth jest włączony.",
+    "CL_DV_PIND_accessory_firmware_update": "Aktualizacja oprogramowania sprzętowego akcesoriów",
+    "CL_CF_CS_ble_scan_not_list": "Jeśli Twoje urządzenie nie znajduje się na liście, możesz kliknąć przycisk „SPRÓBUJ PONOWNIE”, aby wyszukać ponownie, lub kliknąć przycisk „DALEJ”, aby skonfigurować sieć w inny sposób.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nie znaleźliśmy żadnego urządzenia z Bluetooth. Możesz kliknąć „SPRÓBUJ PONOWNIE”, aby wyszukać ponownie, lub kliknąć „DALEJ”, aby skonfigurować sieć w inny sposób.",
+    "CL_DV_WM_pump_cleaning": "Czyszczenie pompy...",
+    "CL_DV_WM_autodoes_tip": "Włącz tę funkcję, a Twoje urządzenie będzie inteligentnie dozować detergent i płyn zmiękczający podczas prania.",
+    "CL_DV_WM_detergent_department_key": "KOMORA NA DETERGENT",
+    "CL_DV_WM_Dosage_Amount_key": "Ilość dawki",
+    "CL_DV_WM_softener_department_key": "KOMORA NA ZMIĘKCZACZE",
+    "CL_DV_WM_auto_does_with_detergent": "Autodozowanie z detergentem",
+    "CL_DV_WM_same_detergent": "Ten sam detergent",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normalna dawka: 4~5 kg wagi odzieży.",
+    "CL_DV_WM_pump_clean_note_1": "Uwagi: Jeśli chcesz zmienić zawartość komponentu dozującego, pamiętaj, aby ",
+    "CL_DV_WM_pump_clean_note_2": "najpierw wyczyść komponent.",
+    "CL_DV_WM_Pump_clean_key": "Pompa czysta",
+    "CL_DV_WM_pump_clean_how_to_use": "Jak używać?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Przed uruchomieniem funkcji czyszczenia pompki opróżnij komorę i napełnij ją wodą.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktywuj funkcję czyszczenia pompy od strony maszyny.",
+    "CL_DV_WM_pump_clean_when_to_use": "Kiedy stosować?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Jeśli chcesz zmienić zawartość komory „Zmiękczacz”, upewnij się, że jest pusta i przed następnym użyciem uruchom funkcję czyszczenia pompki. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Jeżeli pompa nie była czyszczona przez ponad pół roku, możesz włączyć funkcję czyszczenia pompy.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARDOWE AUTODOSE",
+    "CL_DV_WM_compartment_in_use_key": "KOMORA W UŻYCIU",
+    "CL_CF_CS_oven_g_800_cs_1": "Ustaw urządzenie w normalnym trybie pracy.\n Kliknij ikonę menu.",
+    "CL_CF_CS_oven_g_800_cs_2": "Dotknij ikony Wi-Fi i przytrzymaj ją przez około 3–6 sekund, aż osiągnie ona literę „C” na osi czasu.",
+    "CL_CF_CS_oven_g_800_cs_3": "Sieć urządzeń będzie teraz otwarta i będzie można na nią nawiązać połączenie przez 5 minut.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_CF_CS_oven_g_800_p_1": "Ustaw urządzenie w normalnym trybie pracy.\n Kliknij ikonę menu.",
+    "CL_CF_CS_oven_g_800_p_2": "Dotknij ikony Wi-Fi i przytrzymaj ją przez około 6–9 sekund, aż na osi czasu pojawi się litera „P”.",
+    "CL_CF_CS_oven_g_800_p_3": "Urządzenie będzie teraz gotowe do sparowania. Trwa to 3 minuty.\n Kliknij DALEJ, aby kontynuować.",
+    "CL_DV_PIND_update_fail_tip1": "Wystąpił nieoczekiwany błąd. Aktualizacja oprogramowania układowego nie powiodła się.",
+    "CL_DV_PIND_update_fail_tip4": "Spróbuj ponownie zaktualizować akcesorium.",
+    "CL_DV_PIND_update_fail_tip2": "Podczas aktualizacji trzymaj urządzenia w pobliżu.",
+    "CL_DV_PIND_update_fail_tip3": "Sprawdź połączenie Bluetooth.",
+    "room_good_content": "Klimatyzacja w tym pokoju jest dobra. Optymalizacja nie jest na razie potrzebna.",
+    "edit_address_title": "EDYCJA ADRESU",
+    "edit_profile_title": "EDYCJA PROFILU UŻYTKOWNIKA",
+    "CL_DV_OV_reduce_moisture": "Zmniejsz wilgotność",
+    "air_care_level_tips": "Norma oceny temperatury: Dobra: 17 < T < 27℃ Normalna: 10≤T≤17℃, 27≤T≤30℃ Niedobra: T＜10℃ T＞30℃ Norma oceny wilgotności: Dobra: H < 70% Normalna: 30≤H≤40%, 70≤H≤80% Niedobra: H＜30%, H＞80%"
 }
