--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3917,7 +3917,7 @@
     "selected_all": "selectat tot",
     "set_temp_error": "Temperatura setată nu poate fi atinsă. Vă rugăm să modificați temperatura apei.",
     "no_device_support_eco_key": "Niciun dispozitiv nu este disponibil, vă rugăm să vă asigurați că dispozitivele dvs. sunt conectate și acceptă modul ECO.",
-    "appliance_disconnect_cannot_open_eco": "Dispozitivul este deconectat, vă rugăm să verificați dacă WiFi și telecomanda sunt activate.",
+    "appliance_disconnect_cannot_open_eco": "Dispozitivul este deconectat, vă rugăm să verificați dacă Wi-Fi și Telecomanda sunt activate.",
     "power_on_remote_eabled_tips": "Disponibil numai când dispozitivul este pornit și pornirea de la distanță este activată.",
     "power_on_tips": "Disponibil numai când dispozitivul este pornit.",
     "asko_oven_on_during_on": "ON în timpul utilizării",
@@ -4149,5 +4149,43 @@
     "CL_DV_HOB_refresh_mode": "Modul de reîmprospătare",
     "hob_induction3_new_tips": "Aflați cum să vă conectați vasele inteligente de gătit și să răsfoiți o gamă largă de rețete pas cu pas, special create pentru gătit cu precizie la temperatură.",
     "CL_DV_OV_added_successfully": "Adăugat cu succes!",
-    "add_routine": "ADĂUGAȚI RUTINĂ"
+    "add_routine": "ADĂUGAȚI RUTINĂ",
+    "CL_DV_PIND_update_blue_tooth": "Asigurați-vă că bluetooth-ul este pornit.",
+    "CL_DV_PIND_accessory_firmware_update": "Actualizare firmware pentru accesorii",
+    "CL_CF_CS_ble_scan_not_list": "Dacă dispozitivul dvs. nu este listat, puteți face clic pe „ÎNCERCAȚI DIN NOU” pentru a căuta din nou sau puteți face clic pe „URMĂTOR” pentru a configura rețeaua într-un alt mod.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nu am găsit niciun dispozitiv pe bluetooth. Puteți face clic pe „ÎNCERCAȚI DIN NOU” pentru a căuta din nou sau puteți face clic pe „URMĂTOR” pentru a configura rețeaua într-un alt mod.",
+    "CL_DV_WM_pump_cleaning": "Pompa de curatare...",
+    "CL_DV_WM_autodoes_tip": "Activați această funcție și dispozitivul dvs. va distribui în mod inteligent detergent și balsam de rufe în timp ce vă spălați rufele.",
+    "CL_DV_WM_detergent_department_key": "COMPARTIMENT DE DETERGENT",
+    "CL_DV_WM_Dosage_Amount_key": "Cantitatea de dozare",
+    "CL_DV_WM_softener_department_key": "COMPARTIMENT DE MOBILIZARE",
+    "CL_DV_WM_auto_does_with_detergent": "Autodozare cu detergent",
+    "CL_DV_WM_same_detergent": "Același detergent",
+    "CL_DV_WM_normal_dosage_weight_tip": "Doza normală: 4 ~ 5 kg greutate îmbrăcăminte.",
+    "CL_DV_WM_pump_clean_note_1": "Note: Dacă doriți să modificați conținutul componentei de distribuire, vă rugăm să nu uitați ",
+    "CL_DV_WM_pump_clean_note_2": "curățați mai întâi componenta.",
+    "CL_DV_WM_Pump_clean_key": "Pompa curata",
+    "CL_DV_WM_pump_clean_how_to_use": "Cum se utilizează?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Goliți și umpleți compartimentul cu apă înainte de a activa funcția de curățare a pompei.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Activați funcția de curățare a pompei din partea mașinii.",
+    "CL_DV_WM_pump_clean_when_to_use": "Când să folosiți?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Dacă doriți să schimbați conținutul din compartimentul „Dedurizator”, vă rugăm să vă asigurați că este gol și să rulați funcția de curățare a pompei înainte de următoarea utilizare. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Mai mult de jumătate de an nu ați curățat pompa, puteți activa funcția de curățare a pompei.",
+    "CL_DV_WM_standard_auto_does_key": "AUTODOZA STANDARD",
+    "CL_DV_WM_compartment_in_use_key": "COMPARTIMENT ÎN UTILIZARE",
+    "CL_CF_CS_oven_g_800_cs_1": "Setați dispozitivul în condiții normale de funcționare.\n Atingeți pictograma meniului.",
+    "CL_CF_CS_oven_g_800_cs_2": "Atingeți și mențineți apăsată pictograma Wi-Fi timp de aproximativ 3-6 secunde până când ajunge la „C” pe cronologie.",
+    "CL_CF_CS_oven_g_800_cs_3": "Rețeaua dispozitivului este acum deschisă pentru conectare timp de 5 minute.\n Faceți clic pe NEXT pentru a continua.",
+    "CL_CF_CS_oven_g_800_p_1": "Setați dispozitivul în condiții normale de funcționare.\n Atingeți pictograma meniului.",
+    "CL_CF_CS_oven_g_800_p_2": "Atingeți și mențineți apăsată pictograma Wi-Fi timp de aproximativ 6-9 secunde până când ajunge la „P” pe cronologie.",
+    "CL_CF_CS_oven_g_800_p_3": "Dispozitivul este acum gata pentru asociere timp de 3 minute.\n Faceți clic pe NEXT pentru a continua.",
+    "CL_DV_PIND_update_fail_tip1": "A apărut o eroare neașteptată. Actualizarea firmware-ului nu a reușit.",
+    "CL_DV_PIND_update_fail_tip4": "Vă rugăm să încercați din nou să vă actualizați accesoriul.",
+    "CL_DV_PIND_update_fail_tip2": "Țineți-vă dispozitivele aproape în timp ce actualizați.",
+    "CL_DV_PIND_update_fail_tip3": "Verificați conexiunea bluetooth.",
+    "room_good_content": "Aerul acestei camere este bun. Optimizarea nu este necesară deocamdată.",
+    "edit_address_title": "EDITAȚI ADRESA",
+    "edit_profile_title": "EDITATI PROFILUL UTILIZATORULUI",
+    "CL_DV_OV_reduce_moisture": "Reduce umiditatea",
+    "air_care_level_tips": "Standard de evaluare a temperaturii: Bine: 17 < T < 27℃ Normal: 10≤T≤17℃, 27≤T≤30℃ Nu bine: T<10℃ T<30℃ Standard de evaluare a umidității: Bine: H < 70% Normal: 30≤H≤40%, 70≤H≤80% Nu este bine: H<30%, H<80%"
 }
