--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -3917,7 +3917,7 @@
     "selected_all": "hepsi seçildi",
     "set_temp_error": "Ayarlanan sıcaklığa ulaşılamıyor. Lütfen su yolu sıcaklığını değiştirin.",
     "no_device_support_eco_key": "Kullanılabilir cihaz yok, lütfen cihazlarınızın bağlı olduğundan ve ECO modunu desteklediğinden emin olun.",
-    "appliance_disconnect_cannot_open_eco": "Cihaz bağlantısı kesildi, lütfen WiFi ve Uzaktan Kumandanın etkin olup olmadığını kontrol edin.",
+    "appliance_disconnect_cannot_open_eco": "Cihaz bağlantısı kesildi, lütfen Wi-Fi ve Uzaktan Kontrol özelliğinin etkin olup olmadığını kontrol edin.",
     "power_on_remote_eabled_tips": "Yalnızca cihaz açıkken ve uzaktan başlatma etkinleştirildiğinde kullanılabilir.",
     "power_on_tips": "Yalnızca cihaz açıkken kullanılabilir.",
     "asko_oven_on_during_on": "Kullanım sırasında AÇIK",
@@ -4149,5 +4149,43 @@
     "CL_DV_HOB_refresh_mode": "Yenileme modu",
     "hob_induction3_new_tips": "Akıllı pişirme kaplarınızı nasıl bağlayacağınızı öğrenin ve özellikle hassas sıcaklık pişirme için hazırlanmış çok çeşitli adım adım tariflere göz atın.",
     "CL_DV_OV_added_successfully": "Başarıyla eklendi!",
-    "add_routine": "RUTİN EKLE"
+    "add_routine": "RUTİN EKLE",
+    "CL_DV_PIND_update_blue_tooth": "Bluetooth'unuzun açık olduğundan emin olun.",
+    "CL_DV_PIND_accessory_firmware_update": "Aksesuar aygıt yazılımı güncellemesi",
+    "CL_CF_CS_ble_scan_not_list": "Cihazınız listede yoksa, tekrar arama yapmak için 'TEKRAR DENE'ye tıklayabilir veya ağı başka bir şekilde yapılandırmak için 'İLERİ'ye tıklayabilirsiniz.",
+    "CL_CF_CS_ble_scan_have_not_found": "Bluetooth'ta herhangi bir cihaz bulamadık. Tekrar aramak için 'TEKRAR DENE'ye tıklayabilir veya ağı başka bir şekilde yapılandırmak için 'İLERİ'ye tıklayabilirsiniz.",
+    "CL_DV_WM_pump_cleaning": "Pompa temizleniyor...",
+    "CL_DV_WM_autodoes_tip": "Bu özelliği etkinleştirin ve çamaşırlarınızı yıkarken cihazınız akıllı bir şekilde deterjanı ve yumuşatıcıyı dağıtacaktır.",
+    "CL_DV_WM_detergent_department_key": "DETERJAN BÖLMESİ",
+    "CL_DV_WM_Dosage_Amount_key": "Dozaj Miktarı",
+    "CL_DV_WM_softener_department_key": "YUMUŞATICI BÖLMESİ",
+    "CL_DV_WM_auto_does_with_detergent": "Deterjanla Otomatik Dozaj",
+    "CL_DV_WM_same_detergent": "Aynı Deterjan",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normal dozaj: 4~5kg giysi ağırlığı.",
+    "CL_DV_WM_pump_clean_note_1": "Notlar: Dağıtım bileşeninin içeriğini değiştirmek isterseniz lütfen şunu unutmayın: ",
+    "CL_DV_WM_pump_clean_note_2": "öncelikle bileşeni temizleyin.",
+    "CL_DV_WM_Pump_clean_key": "Pompa temizliği",
+    "CL_DV_WM_pump_clean_how_to_use": "Nasıl kullanılır?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Pompa temizleme fonksiyonunu etkinleştirmeden önce bölmeyi boşaltın ve suyla doldurun.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Makine tarafından pompa temizleme fonksiyonunu aktifleştirin.",
+    "CL_DV_WM_pump_clean_when_to_use": "Ne zaman kullanılmalı?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. “Yumuşatıcı” bölmesindeki içeriği değiştirmek isterseniz, lütfen bir sonraki kullanımdan önce bölmenin boş olduğundan emin olun ve pompa temizleme işlevini çalıştırın. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2.Yarım yıldan fazla bir süredir pompanızı temizlemediyseniz, pompa temizleme fonksiyonunu aktif edebilirsiniz.",
+    "CL_DV_WM_standard_auto_does_key": "STANDART OTODOZ",
+    "CL_DV_WM_compartment_in_use_key": "KULLANIMDAKİ BÖLME",
+    "CL_CF_CS_oven_g_800_cs_1": "Cihazı normal çalışma koşullarına ayarlayın.\n Menü simgesine dokunun.",
+    "CL_CF_CS_oven_g_800_cs_2": "Zaman çizelgesinde \"C\" harfine ulaşana kadar Wi-Fi simgesine yaklaşık 3-6 saniye basılı tutun.",
+    "CL_CF_CS_oven_g_800_cs_3": "Cihaz ağı artık 5 dakikalığına bağlantıya açık olacak.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_CF_CS_oven_g_800_p_1": "Cihazı normal çalışma koşullarına ayarlayın.\n Menü simgesine dokunun.",
+    "CL_CF_CS_oven_g_800_p_2": "Zaman çizelgesinde \"P\" harfine ulaşana kadar Wi-Fi simgesine yaklaşık 6-9 saniye basılı tutun.",
+    "CL_CF_CS_oven_g_800_p_3": "Cihaz artık 3 dakika boyunca eşleştirmeye hazır.\n Devam etmek için İLERİ’ye tıklayın.",
+    "CL_DV_PIND_update_fail_tip1": "Beklenmeyen bir hata oluştu. Yazılım güncellemesi başarısız oldu.",
+    "CL_DV_PIND_update_fail_tip4": "Lütfen aksesuarınızı güncellemek için tekrar deneyin.",
+    "CL_DV_PIND_update_fail_tip2": "Güncelleme sırasında cihazlarınızı yakınınızda bulundurun.",
+    "CL_DV_PIND_update_fail_tip3": "Bluetooth bağlantınızı kontrol edin.",
+    "room_good_content": "Bu odanın kliması iyi. Şimdilik optimizasyona gerek yok.",
+    "edit_address_title": "ADRESİ DÜZENLE",
+    "edit_profile_title": "KULLANICI PROFİLİNİ DÜZENLE",
+    "CL_DV_OV_reduce_moisture": "Nem oranını azaltın",
+    "air_care_level_tips": "Sıcaklık değerlendirme standardı: İyi: 17 < T < 27℃ Normal: 10≤T≤17℃, 27≤T≤30℃ İyi değil: T＜10℃ T＞30℃ Nem değerlendirme standardı: İyi: H < %70 Normal: 30≤H≤ %40, 70≤H≤ %80 İyi değil: H＜%30, H＞%80"
 }
